[tool.poetry]
name = "python-rektor-monitor"
version = "0.1.0"
description = ""
authors = ["samanthagburek <sgg2056@nyu.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_rekor_monitor"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
cryptography = "^44.0.0"

[tool.poetry.group.test.dependencies]
mypy = "^1.13.0"
black = "^24.10.0"
ruff = "^0.7.3"
flake8 = "^7.1.1"
pylint = "^3.3.1"
autodocstrings = "^0.1.3"
bandit = "^1.7.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rekor-monitor = "python_rekor_monitor.main:main"
