[tool.poetry]
name = "python-rektor-monitor"
version = "0.1.1"
description = ""
authors = ["samanthagburek <sgg2056@nyu.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_rekor_monitor"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.32.3"
cryptography = "44.0.0"
pytest = "8.3.4"
coverage = "7.6.9"
pytest-cov = "6.0.0"
jsonschema = "4.23.0"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
argcomplete = "3.5.1"
arrow = "1.3.0"
astor = "0.8.1"
astroid = "3.3.5"
attrs = "24.2.0"
autodocstrings = "0.1.3"
bandit = "1.7.10"
black = "24.10.0"
boolean-py = "4.0"
certifi = "2024.8.30"
cffi = "1.17.1"
cfgv = "3.4.0"
chardet = "5.2.0"
charset-normalizer = "3.4.0"
click = "8.1.7"
cyclonedx-bom = "5.1.1"
cyclonedx-python-lib = "8.5.0"
defusedxml = "0.7.1"
dill = "0.3.9"
distlib = "0.3.9"
distro = "1.9.0"
filelock = "3.16.1"
flake8 = "7.1.1"
fqdn = "1.5.1"
h11 = "0.14.0"
httpcore = "1.0.6"
httpx = "0.27.2"
identify = "2.6.1"
idna = "3.10"
iniconfig = "2.0.0"
isoduration = "20.11.0"
isort = "5.13.2"
jiter = "0.7.0"
jsonpointer = "3.0.0"
jsonschema-specifications = "2024.10.1"
license-expression = "30.4.0"
lxml = "5.3.0"
markdown-it-py = "3.0.0"
mccabe = "0.7.0"
mdurl = "0.1.2"
mocker = "1.1.1"
mypy = "1.13.0"
mypy-extensions = "1.0.0"
nodeenv = "1.9.1"
openai = "1.54.3"
packageurl-python = "0.16.0"
packaging = "24.2"
pathspec = "0.12.1"
pbr = "6.1.0"
pip-requirements-parser = "32.0.1"
pipx = "1.7.1"
platformdirs = "4.3.6"
pluggy = "1.5.0"
pre-commit = "4.0.1"
py-serializable = "1.1.2"
pycodestyle = "2.12.1"
pycparser = "2.22"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pyflakes = "3.2.0"
pygments = "2.18.0"
pylint = "3.3.1"
pyparsing = "3.2.0"
pytest-mock = "3.14.0"
python-dateutil = "2.9.0.post0"
pyyaml = "6.0.2"
referencing = "0.35.1"
rfc3339-validator = "0.1.4"
rfc3987 = "1.3.8"
rich = "13.9.4"
rpds-py = "0.22.3"
ruff = "0.7.3"
setuptools = "75.6.0"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
sortedcontainers = "2.4.0"
stevedore = "5.3.0"
tomlkit = "0.13.2"
tqdm = "4.67.0"
typer = "0.13.0"
types-python-dateutil = "2.9.0.20241003"
types-requests = "2.32.0.20241016"
typing-extensions = "4.12.2"
uri-template = "1.3.0"
urllib3 = "2.2.3"
userpath = "1.9.2"
virtualenv = "20.27.1"
webcolors = "24.11.1"

[tool.poetry.group.test.dependencies]
mypy = "^1.13.0"
black = "^24.10.0"
ruff = "^0.7.3"
flake8 = "^7.1.1"
pylint = "^3.3.1"
autodocstrings = "^0.1.3"
bandit = "^1.7.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rekor-monitor = "python_rekor_monitor.main:main"
