[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["samanthagburek <sgg2056@nyu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test.dependencies]
mypy = "^1.13.0"
black = "^24.10.0"
ruff = "^0.7.3"
flake8 = "^7.1.1"
pylint = "^3.3.1"
autodocstrings = "^0.1.3"
bandit = "^1.7.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
